--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
     </div>
 
     <!-- About -->
-    <div class="container fullwidth">
+    <div id="about" class="container fullwidth">
         <div class="diamonds" style="top: -34px;"></div>
 
         <div class="container row">
             <div class="container list">
-                <h1 id="about">About</h1>
+                <h1 >About</h1>
                 <p>
                     We played some old board games and decided to create our own. Something simple and quick. After a few months of  designing and testing, we came up with our game concept.<br><br>
             
