--- a/index.html
+++ b/index.html
@@ -35,17 +35,20 @@
             <a href="#cards">Cards</a>
             <img src="img/navdiv.svg" alt="">
 
-            <a href="#tournament">Tournament</a>
-            <img src="img/navdiv.svg" alt="">
+            <!-- <a href="#tournament">Tournament</a>
+            <img src="img/navdiv.svg" alt=""> -->
 
             <a href="#about">About</a>
             <img src="img/navdiv.svg" alt="">
 
-            <a class="discbutton" href="https://discord.gg/ybsKua6XVM" target="_blank">
+            <a href="https://discord.gg/ybsKua6XVM" target="_blank" style="color: #f3ca78;">Join Discord to Play</a>
+            <img src="img/navdiv.svg" alt="">
+
+            <!-- <a class="discbutton" href="https://discord.gg/ybsKua6XVM" target="_blank">
                 <img src="img/discord.svg" alt="">
                 <div></div>
                 Join our Discord to Play
-            </a>
+            </a> -->
         </div>
     </nav>
 
