--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="#about">About</a>
             <img src="img/navdiv.svg" alt="">
 
-            <a href="https://discord.gg/ybsKua6XVM" target="_blank" style="color: #f3ca78;">Join Discord to Play</a>
+            <a href="https://discord.gg/ybsKua6XVM" target="_blank" style="color: var(--yellow)">Join Discord to Play</a>
             <img src="img/navdiv.svg" alt="">
 
             <!-- <a class="discbutton" href="https://discord.gg/ybsKua6XVM" target="_blank">
