--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="#about">About</a>
             <img src="img/navdiv.svg" alt="">
 
-            <a href="https://discord.gg/ybsKua6XVM" target="_blank" style="color: var(--yellow)">Join Discord to Play</a>
+            <a href="https://discord.gg/ybsKua6XVM" target="_blank" style="color: var(--blue)">Join Discord to Play</a>
             <img src="img/navdiv.svg" alt="">
 
             <!-- <a class="discbutton" href="https://discord.gg/ybsKua6XVM" target="_blank">
@@ -73,12 +73,12 @@
     <!-- How it plays -->
     <div id="how" class="container row">
         <div class="container list">
-            <h1>How it plays</h1>
+            <h1 style="background-color: white;">How it plays</h1>
             <ol>
                 <li>Players get three units each.</li>
-                <li>Move units towards the King’s Chamber.</li>
+                <li>Move units towards the King’s area.</li>
                 <li>Play cards to get an advantage.</li>
-                <li>When one player moves all units to the King’s Chamber, the game ends.</li>
+                <li>Once all units of one player reach<br> King’s area, the game ends.</li>
                 <li>Player with the most points wins.</li>
             </ol>
         </div>
