--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Chains Of Morr is a free turn-based strategy game for 2 players. Players move units through on the board while playing cards to gain advantage, using a unique card chain mechanic that creates cool combos.">
+    <meta name="keywords" content="Chains of morr, card, chain, board game, ttg, morr">
     <title>Chains Of Morr</title>
 
     <!-- Favicon -->
