--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html 
+    lang="en"
+    xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:fb="http://ogp.me/ns/fb#"
+>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Chains Of Morr is a free turn-based strategy game for 2 players. Players move units through on the board while playing cards to gain advantage, using a unique card chain mechanic that creates cool combos.">
-    <meta name="keywords" content="Chains of morr, card, chain, board game, ttg, morr">
+    <meta name="keywords" content="chains of morr, chainsofmorr, morr,">
     <title>Chains Of Morr</title>
+
+    <!-- Cover image -->
+    <meta property="og:image" content="http://www.chainsofmorr.nl/img/screen.png" />
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.png">
