--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Chains Of Morr is a free turn-based strategy game for 2 players. Players move units through on the board while playing cards to gain advantage, using a unique card chain mechanic that creates cool combos.">
+    <meta name="description" content="Free turn-based strategy game with a unique card system that allows players to predict opponets turn and create a strategy to counter it. You can play the game on the web with up to 3 players.">
     <meta name="keywords" content="chains of morr, chainsofmorr, morr,">
     <title>Chains Of Morr</title>
 
