--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <img src="img/screen.png" alt="Screenshot">
     </div>
 
-    <div class="container" style="margin-bottom: 320px;">
+    <div class="container unitgap" style="margin-bottom: 320px;">
         <div class="speechbubble" style="position: absolute; top: 22px; left: 154px; transform: rotate(1deg);">
             <p>Learn how to play in 5 minutes</p>
             <img src="img/triangle.svg" alt="">
@@ -168,7 +168,7 @@
         <img class="edge" src="img/edge.svg">
 
         <h1 >Base Cards</h1>
-        <img src="img/carddiv.svg" alt="">
+        <img class="carddiv" src="img/carddiv.svg" alt="">
         <div class="cardgrid container row">
             <img src="img/cards/move.svg">
             <img src="img/cards/soul exchange.svg">
@@ -189,7 +189,7 @@
             <img src="img/cards/seemore.svg">
             
         </div>
-        <img src="img/carddiv.svg" alt="">
+        <img class="carddiv" src="img/carddiv.svg" alt="">
 
         <!-- Tournament -->
         <div class="container">
