--- a/index.html
+++ b/index.html
@@ -293,9 +293,9 @@
             <img src="img/logo.svg" alt="">
     
             <div class="container">
-                <a href="https://twitter.com/chainsofmorr" target="_blank">Twitter &#x2197;</a>
-                <a href="https://www.instagram.com/chains_of_morr/" target="_blank">Instagram &#x2197;</a>
-                <a href="https://discord.gg/ybsKua6XVM" target="_blank">All game info and rules in Discord &#x2197;</a>
+                <a href="https://twitter.com/chainsofmorr" target="_blank">Twitter &</a>
+                <a href="https://www.instagram.com/chains_of_morr/" target="_blank">Instagram</a>
+                <a href="https://discord.gg/ybsKua6XVM" target="_blank">All game info and rules in Discord</a>
             </div>
         </div>
     </footer>
